--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,8 @@ name = "nu_plugin_dialog"
 
 [dependencies]
 dialoguer = { version = "0.10.4", features = ["fuzzy-select", "completion"] }
-nu-plugin = "0.78.0"
-nu-protocol = "0.78.0"
+nu-plugin = { version = "0.86.1", path = "../nushell/crates/nu-plugin" }
+nu-protocol = { version = "0.86.1", path = "../nushell/crates/nu-protocol" }
 
 # The profile that 'cargo dist' will build with
 [profile.dist]
